k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: kii-proekt
  labels:
    app: db
spec:
  clusterIP: None
  selector:
    app: db
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
